--- a/package.json
+++ b/package.json
@@ -51,5 +51,5 @@
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
   },
-  "proxy": "http://localhost:4000"
+  "proxy": "http://127.0.0.1:4000"
 }
